# embedded-scripts-bench

./: Cargo.toml  README.md
benches/: bench.rs  crc.js
src/: main.rs
