[package]
name = "rust-embedded-scripts-bench"
version = "0.0.1"
authors = ["Piaoger Gong <piaoger@gmail.com>"]
edition = "2021"


[features]
default = [ ]

bench_all = ["bench_rune", "bench_rhai", "bench_dyon", "bench_javascript", "bench_lua"]

# without v8, luass
bench_lite = ["bench_rune", "bench_rhai", "bench_dyon", "bench_lite_javascript"]

bench_rune = ["rune", "rune-modules"]
bench_rhai = ["rhai"]

bench_dyon = ["dyon"]
bench_lite_javascript = ["quick-js", "boa_engine"]
bench_javascript = ["deno_core", "bench_lite_javascript"]
bench_lua = [ ]


[dependencies.rhai]
version = "1.17"
optional = true

[dependencies.rune-modules]
version = "0.12"
optional = true

[dependencies.rune]
version = "0.12"
optional = true

[dependencies.dyon]
version = "0.49"
features = []
optional = true

[dependencies.deno_core]
version = "0.245"
optional = true

[dependencies.quick-js]
version = "0.4"
optional = true

[dependencies.boa_engine]
optional = true
version = "0.18.0"
features = ["annex-b"]

[dev-dependencies]
criterion = { version="0.3", features=["html_reports"]}

[[bench]]
name = "bench"
harness = false